# anagram-analysis

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  task.md
report/docs/: VARIANTS_README.md
scripts/: evaluate_all_arch.sh  evaluate_all_variants.sh  generate_all_variants.sh  slide_ani.sh  slide_gen.sh
src/: __init__.py
visual_anagrams/: __init__.py  animate.py  compare_arch_variants.py  compare_variants.py  debug_arch_eval.py  evaluate.py  evaluate_arch_comparison.py  generate.py  generate_variant1_sdxl.py  generate_variant2_adaptive.py  generate_variant2_lightweight.py  generate_variant3_enhanced.py  generate_variant3_frequency.py  readme.md  samplers.py  test_shash.md  utils.py
visual_anagrams/visual_anagrams/: animate.py
visual_anagrams_files/notebooks/: colab_demo_pro_tier.ipynb
