[project]
name = "anagram-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "certifi>=2025.11.12",
    "charset-normalizer>=3.4.4",
    "diffusers>=0.36.0",
    "einops>=0.8.1",
    "filelock>=3.20.0",
    "fsspec>=2025.12.0",
    "huggingface-hub>=0.36.0",
    "idna>=3.11",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "importlib-metadata>=8.7.0",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.3",
    "mpmath>=1.3.0",
    "networkx>=3.6",
    "numpy>=2.3.5",
    "packaging>=25.0",
    "pillow>=12.0.0",
    "psutil>=7.1.3",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "regex>=2025.11.3",
    "requests>=2.32.5",
    "safetensors>=0.7.0",
    "sentencepiece>=0.2.1",
    "sympy>=1.14.0",
    "tokenizers>=0.22.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "triton>=3.5.1",
    "typing-extensions>=4.15.0",
    "urllib3>=2.6.0",
    "wandb>=0.23.1",
    "zipp>=3.23.0",
]
